# Year3Sem2

./: .gitattributes
CN/: Lab EtherChannel_summar_practic.doc  Lab FO and struct.cab_summary and practical.doc  Lab UTP_summary and practical.doc  Lab spanning-tree_summar_practic.doc  Model subiect RC_CN.docx  PT_initial_config.pkt  colocviu  examCN
CN/Lab3/: CN4.doc  Lab Ethernet si intro Packet Tracer_summary and practic.doc  Lab3NeaguLorena.pkt
CN/Lab4/: CN5.doc  (+1 more)
CN/Lab5/: Lab5NeaguLorena.pkt
IP/: Presentation.pptx  project backup
IP/Lab3/OpenCVApplication-VS2017_OCV340_basic/: CMakeLists.txt  OpenCVApplication.cpp
IP/Lab4/OpenCVApplication-VS2017_OCV340_basic/: CMakeLists.txt  OpenCVApplication.cpp
IS/: Text_Generation_LSTM-2.ipynb  Text_Generation_LSTM-3.ipynb  Text_Generation_LSTM-4.ipynb
LFT/: HK  HK3  P3_Socaci_Radu.c  P3_Socaci_Radu.l  TREES  haskell.c  haskell_bonus.c  haskell_bonus.l  interpreter.c  interpreter.l  lex.yy.c  trees.c  trees.l  trees.y
LP/: C11-D:BFS  C11-D:BFS.pl  ColoqEx.pl  ColoqEx2.pl  LAB3prolog.pl  LAB4prolog.pl  Lab10DifferenceLists.pl  Lab11Graphs-2.pl  Lab11Graphs.pl  Lab12GraphSearchAlgs.pl  Lab1LP.pl  Lab3Prolog-NeaguLorena.pl  Lab3SWISH -- lqrcYWTO.pl.webarchive  Lab5Prolog.pl  Lab7deeplists.pl  Lab8Trees.pl  Lab9IncompleteLists.pl  PrepExam-2.pl  PrepExam.pl  PrepExamDisc-2.pl  PrepExamDisc.pl  SWISH -- lqrcYWTO.pl.webarchive  bipartit.pl  coloviu.pl  exam.pl  examLore.pl  lqrcYWTO.pl  seminar5.pl  seminar6.pl  seminar7.pl
project_is/: weights-improvement-01-2.7055.hdf5  weights-improvement-02-2.4466.hdf5
(+214 files in other folders)
